@@ -65,13 +65,13 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_PREFERRED.getId()));
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -91,19 +91,19 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo("22298006");
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 2)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 2)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_DESCRIPTION.getId()));
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getValue()
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getValue()
             .toString()).isEqualTo(SNOMED_DESCRIPTION.getTerm());
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -123,15 +123,15 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue().toString())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue().toString())
             .isEqualTo((SNOMED_PREFERRED.getTerm()));
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -149,15 +149,15 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue().toString())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue().toString())
             .isEqualTo((SNOMED_PREFERRED.getTerm()));
         assertThat(codeableConcept.getText())
             .isEqualTo(DISPLAY_NAME_1);
@@ -176,15 +176,15 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_DESCRIPTION.getId()));
     }
 
@@ -206,11 +206,11 @@ public class CodeableConceptMapperTest {
             .isEqualTo(CONCEPT_ID);
         assertThat(codeableConcept.getCoding().get(1).getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(1).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().get(1).getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(1).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().get(1).getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(1).getExtension().get(0).getExtension().get(0).getValue().toString())
+        assertThat(codeableConcept.getCoding().get(1).getExtension().getFirst().getExtension().getFirst().getValue().toString())
             .isEqualTo((SNOMED_DESCRIPTION.getTerm()));
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -233,11 +233,11 @@ public class CodeableConceptMapperTest {
             .isEqualTo(CONCEPT_ID);
         assertThat(codeableConcept.getCoding().get(1).getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(1).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().get(1).getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(1).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().get(1).getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(1).getExtension().get(0).getExtension().get(0).getValue().toString())
+        assertThat(codeableConcept.getCoding().get(1).getExtension().getFirst().getExtension().getFirst().getValue().toString())
             .isEqualTo((SNOMED_DESCRIPTION.getTerm()));
         assertThat(codeableConcept.getText())
             .isEqualTo(DISPLAY_NAME_2);
@@ -257,11 +257,11 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(0).getExtension())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension())
             .isNullOrEmpty();
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -279,11 +279,11 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(DISPLAY_NAME_1);
-        assertThat(codeableConcept.getCoding().get(0).getExtension())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension())
             .isNullOrEmpty();
         assertThat(codeableConcept.getText())
             .isNull();
@@ -324,15 +324,15 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(SNOMED_PREFERRED.getConceptid());
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_PREFERRED.getId()));
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -350,15 +350,15 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(SNOMED_PREFERRED.getConceptid());
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 1)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_PREFERRED.getId()));
         assertThat(codeableConcept.getText()).isNull();
     }
@@ -376,13 +376,13 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertEquals(SNOMED_PREFERRED.getConceptid(), codeableConcept.getCoding().get(0).getCode());
-        assertEquals(SNOMED_PREFERRED.getTerm(), codeableConcept.getCoding().get(0).getDisplay());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 1)
+        assertEquals(SNOMED_PREFERRED.getConceptid(), codeableConcept.getCoding().getFirst().getCode());
+        assertEquals(SNOMED_PREFERRED.getTerm(), codeableConcept.getCoding().getFirst().getDisplay());
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 1)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_PREFERRED.getId()));
         assertThat(codeableConcept.getText())
             .isEqualTo(DISPLAY_NAME_3);
@@ -402,19 +402,19 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(SNOMED_DESCRIPTION.getConceptid());
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 2)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 2)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_DESCRIPTION.getId()));
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getValue().toString())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getValue().toString())
             .isEqualTo(SNOMED_DESCRIPTION.getTerm());
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -432,19 +432,19 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(SNOMED_DESCRIPTION.getConceptid());
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 2)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 2)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_DESCRIPTION.getId()));
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getValue().toString())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getValue().toString())
             .isEqualTo(SNOMED_DESCRIPTION.getTerm());
         assertThat(codeableConcept.getText()).isNull();
     }
@@ -461,19 +461,19 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(SNOMED_DESCRIPTION.getConceptid());
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().size() == 2)
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().size() == 2)
             .isTrue();
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getUrl())
             .isEqualTo(DESCRIPTION_ID);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(0).getValue())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().getFirst().getValue())
             .isEqualTo(new IdType(SNOMED_DESCRIPTION.getId()));
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getUrl())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getUrl())
             .isEqualTo(DESCRIPTION_DISPLAY);
-        assertThat(codeableConcept.getCoding().get(0).getExtension().get(0).getExtension().get(1).getValue().toString())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension().getFirst().getExtension().get(1).getValue().toString())
             .isEqualTo(SNOMED_DESCRIPTION.getTerm());
         assertThat(codeableConcept.getText())
             .isEqualTo(DISPLAY_NAME_3);
@@ -548,11 +548,11 @@ public class CodeableConceptMapperTest {
         var codedData = unmarshallCodeElementFromXMLString(XML_HEADER + inputXML);
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConceptForMedication(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo(CONCEPT_ID);
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension())
             .isNullOrEmpty();
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -573,11 +573,11 @@ public class CodeableConceptMapperTest {
 
         CodeableConcept codeableConcept = codeableConceptMapper.mapToCodeableConceptForMedication(codedData);
 
-        assertThat(codeableConcept.getCoding().get(0).getCode())
+        assertThat(codeableConcept.getCoding().getFirst().getCode())
             .isEqualTo("22298006");
-        assertThat(codeableConcept.getCoding().get(0).getDisplay())
+        assertThat(codeableConcept.getCoding().getFirst().getDisplay())
             .isEqualTo(SNOMED_PREFERRED.getTerm());
-        assertThat(codeableConcept.getCoding().get(0).getExtension())
+        assertThat(codeableConcept.getCoding().getFirst().getExtension())
             .isNullOrEmpty();
         assertThat(codeableConcept.getText())
             .isEqualTo(ORIGINAL_TEXT);
@@ -1014,7 +1014,7 @@ public class CodeableConceptMapperTest {
         var codeableConcept = codeableConceptMapper.mapToCodeableConcept(codedData);
 
         assertAll(
-                () -> assertThat(codeableConcept.getCoding().get(0).getCode()).isEqualTo("22K.."),
+                () -> assertThat(codeableConcept.getCoding().getFirst().getCode()).isEqualTo("22K.."),
                 () -> assertThat(codeableConcept.getCoding().get(1).getCode()).isEqualTo("60621009"),
                 () -> assertThat(codeableConcept.getCoding().get(2).getCode()).isEqualTo("22K..00")
         );
